Переход на JAVA8